# CertificatePortal

./: .funcignore  .gitignore  AGENTS.md  README.md  function_app.py  host.json  local.settings.json.example  pyproject.toml  requirements.txt
.github/workflows/: dependency-review.yml  deploy-function-app.yml  pr-checks.yml
docs/: cosmos-data-model.md  deployment-github-actions.md  page-paths.md  portal-authentication.md
docs/adr/: 0001-github-actions-oidc-functions-deployment.md  0002-portal-entry-path.md  0003-portal-authentication-via-google-workspace-internal-oauth.md
infra/bicep/: main.bicep
scripts/: backfill_completion_cert_metrics.py  generate_sample_completion_certificate_pdf.py  generate_volunteer_service_certificate_previews.py  migrate_issued_cert_blob_paths.py  remove_volunteer_service_ticket_name.py
src/functions/: __init__.py  assets.py  health.py  home.py  portal.py  public_verification.py
src/shared/: blob_store.py  completion_certificate_pdf.py  completion_metrics.py  completion_store.py  cosmos_options.py  datetime_values.py  event_store.py  i18n.py  page_alerts.py  portal_auth.py  portal_google_group_auth.py  public_lookup_store.py  tax_receipt_download_ticket.py  tax_receipt_store.py  templates.py  volunteer_service_store.py
tests/functions/: test_health.py  test_home.py  test_portal.py  test_public_verification.py
tests/scripts/: test_backfill_completion_cert_metrics.py
tests/shared/: test_blob_store.py  test_completion_certificate_pdf.py  test_completion_store.py  test_datetime_values.py  test_event_store.py  test_i18n_catalog.py  (+6 more)
(+35 files in other folders)
