[project]
name = "ipg-certificate"
version = "0.1.0"
description = "iPlayground 完訓證明系統後端"
requires-python = ">=3.13,<3.14"
dependencies = [
  "azure-functions>=1.23.0,<2.0.0",
  "azure-cosmos>=4.9.0,<5.0.0",
  "azure-identity>=1.19.0,<2.0.0",
  "azure-storage-blob>=12.24.0,<13.0.0",
  "pypdf>=5.0.0,<7.0.0",
  "pikepdf>=9.0.0,<11.0.0",
  "reportlab>=4.2.0,<5.0.0",
  "qrcode[pil]>=8.0.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]
